--- a/app/eleve/pages/copie.html
+++ b/app/eleve/pages/copie.html
@@ -10,7 +10,7 @@
     <div class="row">
         <!-- modified -->
         <div class="col-lg-12">
-            <div ng-repeat="section in copie.sections">
+            <div > <!-- ng-repeat="section in copie.sections" -->
                 <div class="panel {{panelColor[$id%4]}}">
                     <div class="panel-heading">
                         {{section.titre}}:&nbsp;&nbsp;
@@ -31,17 +31,17 @@
                                 font-size: 100%;
                             }
                         </style>
-                       <div ng-if="section.type_rendu=='texte'">
+                       <div > <!-- ng-if="section.type_rendu=='texte'" -->
                             <text-angular name="textBox" required></text-angular>
 
                         </div>
 
-                        <div ng-if="section.type_rendu=='url'">
+                        <div > <!-- ng-if="section.type_rendu=='url'" -->
                             Importez ici votre url.
                             <input type="url" ng-model="eleveCo.section.rendu"/>
                         </div>
 
-                        <div ng-if="section.type_rendu=='fichier'">
+                        <div > <!-- ng-if="section.type_rendu=='fichier'" -->
                             Importez ici votre fichier.
                             <input type="file" ng-model="eleveCo.section.rendu"/>
                         </div>
