--- a/app/eleve/pages/evaluations/correction.html
+++ b/app/eleve/pages/evaluations/correction.html
@@ -10,7 +10,7 @@
     <div class="row">
         <!-- modified -->
         <div class="col-lg-12">
-            <div ng-repeat="section in copie.sections">
+            <div > <!-- ng-repeat="section in copie.sections" -->
                 <div class="panel">
                     <div class="panel-heading">
                         {{section.titre}}:&nbsp;&nbsp;
@@ -31,22 +31,22 @@
                         <br>
                         <h4>Correction</h4>
                             <ul class="nav nav-pills nav-stacked nav_dty nav-tabs-justified">
-                                <li ng-repeat="critere in section.criteres">
+                                <li > <!-- ng-repeat="critere in section.criteres" -->
                                     <a ng-click="setTab(critere.id)" data-target="#{{section.id*100+critere.id}}" data-toggle="tab">
                                         Critère n°{{critere.ordre}}
                                     </a>
-                                        <div id="{{section.id*100+critere.id}}" class="tab-content" ng-show="isTab(critere.id)">
+                                        <div id="{{section.id*100+critere.id}}" class="tab-content" > <!-- ng-show="isTab(critere.id)" -->
 
                                             <!--get corrige_critere dont le critere_id correspond à critere-->
 
                                             {{critere.description}}
                                             <br>
-                                            <div ng-if="critere.type=='commentaire'">
+                                            <div > <!-- ng-if="critere.type=='commentaire'" -->
                                                 <br>
                                                 <textarea placeholder="Commentaire" ng-model="corrige_critere.commentaire" rows="5" cols="50"/>
                                             </div>
 
-                                            <div ng-if="critere.type=='condition'">
+                                            <div > <!-- ng-if="critere.type=='condition'" -->
 
                                                 <script>
                                                     $('input[type="checkbox"]').on('change', function() {
@@ -61,7 +61,7 @@
                                                 <textarea placeholder="Commentaire" ng-model="corrige_critere.commentaire" rows="5" cols="50"/>
                                             </div>
 
-                                            <div ng-if="critere.type=='jugement'">
+                                            <div > <!-- ng-if="critere.type=='jugement'" -->
                                                 <br>
                                                 <rzslider rz-slider-model="corrige_critere.note" rz-slider-options="slider.options"></rzslider>
                                                 <br><br>
